--- a/mobile/css/common_new.css
+++ b/mobile/css/common_new.css
@@ -2678,7 +2678,7 @@ body.modalOpen {min-height:100vh;overflow:hidden;}
     gap: 8px;
 }
 .btn-wrap button {
-    flex: 1;
+    flex: 0.5;
     width: 100%;
     height: 64px;
     font-size: 16px;
@@ -2699,6 +2699,7 @@ body.modalOpen {min-height:100vh;overflow:hidden;}
 .btn-wrap button.light {
     background: #FF3333;
     color: #fff;
+    width: 70%;
 }
 .btn-wrap button.bt-tel{
     color:#FF3333;
