--- a/mobile/css/search-list.css
+++ b/mobile/css/search-list.css
@@ -956,7 +956,6 @@
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
   border-radius: 8px;
-  box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
   background-color: #fff;
   border: 1px solid #f1f1f1;
   opacity: 0.2;
@@ -2462,6 +2461,66 @@ margin: 0 auto;
 .detail-element .area.list-content .list-type-vertical .list-detail .list-title { min-height: auto; }
 .detail-element .area.list-content .list-type-vertical .list-detail .list-title > a {-webkit-line-clamp:1;}
 
+.detail-element .area.list-content .list-faq{display:block;/* margin:0 20px; */}
+ .detail-element .area.list-content .list-faq ul{margin:0 20px;border-top:1px solid #1A1A1A}
+.detail-element .area.list-content .list-faq ul li{display:flex;position:relative;padding:24px 16px;border-bottom:1px solid #ddd;flex-direction: row;}
+.detail-element .area.list-content .list-faq ul .answer:before{
+ content:"A";
+ position:absolute;
+ color:#FF0000;
+ font-weight:700
+}
+.detail-element .area.list-content .list-faq ul .answer{
+ display:none;
+}
+.detail-element .area.list-content .list-faq ul .answer.on{
+ display:block;
+ padding:20px 16px;
+ background:#F5F7Fa;
+ position:relative;
+ border-bottom:1px solid #ddd;
+}
+.detail-element .area.list-content .list-faq ul .answer .ans-txt{
+ width:calc(100% - 20px);
+ padding-left:20px;
+}
+.detail-element .area.list-content .list-faq ul li p{
+ font-weight:700;
+ width:20px;
+}
+.detail-element .area.list-content .list-faq ul li:after{
+ content: "";
+ position:absolute;
+ right:16px; top:25px;
+ display: inline-block;
+ vertical-align: middle;
+ /* margin: 3px 0 0 -2px; */
+ margin: 0 0 0 -2px;
+ width: 6px;
+ height: 6px;
+ border: 1px solid #666;
+ transform: rotate(135deg) translateY(-50%);
+ border-bottom: 0;
+ border-left: 0;
+}
+
+.detail-element .area.list-content .list-faq ul li.show:after{
+ content: "";
+ position:absolute;
+ right:10px; top:35px;
+ display: inline-block;
+ vertical-align: middle;
+ /* margin: 3px 0 0 -2px; */
+ margin: 0 0 0 -2px;
+ width: 6px;
+ height: 6px;
+ border: 1px solid #666;
+ transform: rotate(-45deg) translateY(-50%);
+ border-bottom: 0;
+ border-left: 0;
+}
+
+
 /* car option detail */
 .car-option-detail dl {padding:30px 20px;}
 .car-option-detail dl + dl {border-top:1px solid #EDEDED}
@@ -3006,9 +3065,30 @@ color: #F33;
 }
 
 .info-container .txt-wrap p.platenumber{
-    font-size:14px;
+    font-size:13px;
+    color:#666;
+    display: flex;
     line-height: 20px;
+    gap: 11px;
+    align-items: center;
 }
+.info-container .txt-wrap p.platenumber span{
+    display:flex;
+}
+.info-container .txt-wrap p.platenumber span:after{
+    content:"";
+    width:1px;
+    height: 11px;
+    background: #E6E6E6;
+    display: block;
+    position: relative;
+    top: 5px;
+    left: 6px;
+}
+.info-container .txt-wrap p.platenumber span:last-child:after{
+    display:none;
+}
+
 .info-container .txt-wrap p.carprice{
     font-size:16px;
     font-weight:600;
