--- a/mobile/css/common.css
+++ b/mobile/css/common.css
@@ -375,7 +375,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 
 /* button */
 .btn-group { display:flex;justify-content:center; }
-.btn-group button.bt-tel:before {content:"";display:inline-block;vertical-align:middle;width:13px;height:13px;margin:-4px -1px 0 0;background:url("../images/icon/ico-tel-s.svg") no-repeat;background-size: cover;}
+.btn-group button.bt-tel:before {content:"";display:inline-block;vertical-align:middle;width:13px;height:13px;margin: -3px 8px 0 0;background:url("../images/icon/ico-tel-s.svg") no-repeat;background-size: cover;}
 .btn-group button.bt-tel-consult:before {content:"";display:inline-block;vertical-align:middle;width:12px;height:15px;margin:-2px 4px 0 0;background:url("../images/icon/ico-tel-s.svg") no-repeat;}
 
 .bot-fixed {
@@ -387,7 +387,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     bottom:0px;
     z-index: 2;
     padding: 8px 10px;
-    background-color: #f9f9f9;
+    background-color: #FFF;
     /* background-color: #fff; */
     box-shadow: 0 -1px 10px rgba(0,0,0,0.16);
 }
@@ -395,11 +395,11 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 .psc-btn-group.bot-fixed {
     height: auto;
     -webkit-border-radius: 10px 10px 0 0;
-    border-radius: 10px 10px 0 0;
-    border: 1px solid #E9E9E9;
+    border-radius: 20px 20px 0 0;
+    /* border: 1px solid #E9E9E9; */
     z-index: 9999;
     max-height: 95vh;
-    padding: 10px 0;
+    padding: 40px 0 0;
     /* animation:bot-fixmotion 1s infinite ; */
 }
 
@@ -416,7 +416,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 } */
 
 
-.psc-btn-group.bot-fixed::before {
+/* .psc-btn-group.bot-fixed::before {
     content: '';
     position: absolute;
     bottom: 100%;
@@ -430,7 +430,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     border: 1px solid #E9E9E9;
     box-shadow: 0 -4px 6px rgba(0,0,0,0.08);
     border-bottom: none;
-}
+} */
 .psc-btn-group.bot-fixed .btn-group button{
     width:50%;
 }
@@ -445,7 +445,8 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     width:30%;
 }
 .psc-btn-group.bot-fixed .btn-group button.bt-tel{
-    width: 15%;
+    width: 50%;
+    border-top: 1px solid #E6E6E6;
 }
 .psc-btn-group.bot-fixed .btn-group .btn_group button.bt-tel:before{
     width:17px; height:14px;
@@ -459,24 +460,18 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 }
 
 .bot-fixed .btn_toggle {
-    font-size: 0;
     position: absolute;
-    bottom: 100%;
-    left: 50%;
-    width: 60px;
-    height: 15px;
-    margin-left: -30px;
-    background-image: url("../images/icon/ico-view-toggle.svg");
-    background-size: 100% 7px;
-    background-position: center;
-    background-repeat: no-repeat;
-    /* transform: rotate(180deg); */
-    background-color: transparent;
-    transition: 0s;
+    top: 10px;
+    left: calc(50% - 16px);
+    transform: rotate(180deg);
+    width: 24px;
+    height: 24px;
+    background: url("../images/rent_new/icon/modal_up.svg") center/cover;
+    z-index: 10;
 }
 
 .bot-fixed.fold .btn_toggle {
-    transform: rotate(180deg);
+    transform: rotate(0deg);
 }
 
 
@@ -485,7 +480,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    padding: 3px 15px 11px;
+    padding: 3px 26px 11px;
     position: relative;
 }
 
@@ -577,7 +572,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 .bot-fixed .info-wrap .period em {
     font-weight: 600;
     color: #000;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 
@@ -651,7 +646,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 }
 
 .psc-btn-group .btn-group {
-    padding: 0 10px;
+    /* padding: 0 10px; */
 }
 
 .psc-btn-group .btn-group.preSales button{
@@ -732,7 +727,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 .btn-group.al_l a {margin-left:0;}
 .btn-group button,
     /* .btn-group a {margin:0 1%;} */
-.bt-f-s {font-size:14px !important; font-weight: 500 !important;}
+.bt-f-s {font-size: 16px !important;font-weight: 700 !important;}
 .bt-s {min-width:100px !important;height:30px !important;line-height:30px !important;font-size:11px !important;border-radius:3px !important;white-space:nowrap;}
 .bt-m {height:40px !important;line-height:40px !important;font-size:12px !important;border-radius:3px !important;white-space:nowrap;}
 .bt-full {width:100% !important;margin:0;border-radius:0;}
