--- a/mobile/css/common_new.css
+++ b/mobile/css/common_new.css
@@ -1196,15 +1196,17 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 
 
 .bot-fixed .info-wrap .prc {
-    font-size: 14px;
-    font-weight: 300;
-    color: #FF3333;
+    color:  #F33;
+    font-size: 22px;
+    font-weight: 800;
+    letter-spacing: -0.32px;
 }
 
 .bot-fixed .info-wrap .prc em {
-    font-size: 18px;
-    font-weight: 700;
-    color: #FF3333;
+    color:  #F33;
+    font-size: 22px;
+    font-weight: 800;
+    letter-spacing: -0.32px;
 }
 
 .psc-btn-group.bot-fixed .info-wrap .min-container { display: none; }
@@ -1252,21 +1254,23 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 }
 
 .psc-btn-group .btn-group {
-    padding: 0 10px;
+    /* padding: 0 10px; */
 }
 
 .btn-group button {
     min-width: auto;
     width: 100%;
-    height: 100%;
-    line-height: 44px;
-    -webkit-border-radius: 7px;
+    height: 64px;
+    /* line-height: 44px; */
+    /* -webkit-border-radius: 7px; */
     -moz-border-radius: 7px;
     -ms-border-radius: 7px;
     -o-border-radius: 7px;
-    border-radius: 7px;
+    /* border-radius: 7px; */
     margin: 0 0;
-    margin-right: 7px;
+    /* margin-right: 7px; */
+    border-radius: 0;
+    border: none;
 }
 .btn-group button:last-child { margin-right: 0; }
 
@@ -1297,7 +1301,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 .bt-full.rnd {width:100%;margin:0 !important;border-radius:5px !important;}
 .w-auto {min-width:auto !important}
 .bt-half {min-width:50% !important;margin:0 !important;border-radius:0 !important}
-.bt-common-type1 {display:inline-block;min-width:44.5%;padding:0 10px;height:50px;line-height:50px;font-size:13px;background:#FF3333;color:#fff;border:1px solid #FF3333;text-align:center;font-weight:700;border-radius:5px;}
+.bt-common-type1 {display:inline-block;min-width:44.5%;padding:0 10px;font-size: 18px;height:50px;line-height:50px;font-size:13px;background:#FF3333;color:#fff;border:1px solid #FF3333;text-align:center;font-weight:700;border-radius:5px;}
 .bt-common-type2 {display:inline-block;min-width:44.5%;padding:0 10px;height:56px;line-height:56px;font-size:16px;background:#000;color:#fff;border:1px solid #000;text-align:center;font-weight:700;border-radius:5px;}
 .bt-common-type3 {display:inline-block;min-width:44.5%;padding:0 10px;height:50px;line-height:50px;font-size:13px;background:#fff;color:#FF3333;border:1px solid #FF3333;text-align:center;font-weight:700;border-radius:5px;}
 .bt-common-type4 {display:inline-block;min-width:44.5%;padding:0 10px;height:50px;line-height:50px;font-size:13px;background:#fff;color:#666;border:1px solid #999;text-align:center;font-weight:700;border-radius:5px;}
@@ -2472,7 +2476,7 @@ body.modalOpen {min-height:100vh;overflow:hidden;}
 }
 
 .pop_inner .calculate-sum{
-    display:block;
+    /* display:block; */
 }
 
 .pop-contents .calculate strong span {
