--- a/mobile/css/search-list.css
+++ b/mobile/css/search-list.css
@@ -1039,7 +1039,7 @@
 /*.detail-element .car-seller {border-top:1px solid #E9E9E9;}*/
 .detail-element .car-seller .p2p-seller {font-size:12px}
 .detail-element .car-seller .seller-profile {display:flex;margin:0 0 15px 0;}
-.detail-element .car-seller .seller-profile .pic {width:72px;height:72px;border-radius:50%;overflow:hidden;border: 1px solid #e9e9e9;border-radius: 25px;}
+.detail-element .car-seller .seller-profile .pic {width:72px;height:72px;border-radius:50%;overflow:hidden;border: 1px solid #ddd;border-radius: 25px;}
 .detail-element .car-seller .seller-profile .pic img {display:block;width:100%;height:100%;}
 .detail-element .car-seller .seller-profile .info {padding-left:17px;padding-top: 4px;}
 .detail-element .car-seller .seller-profile .info .name {font-size: 0;}
@@ -1131,8 +1131,8 @@
 .detail-element .car-history .car-check-area .i-mark {position:absolute;margin:0;}
 .detail-element .car-history .bt-view-more {display:block;width:100%;text-align:right;margin-top:-26px;border:1px solid #E9E9E9;border-radius:5px;font-size:11px;font-weight:500;}
 .detail-element .s-title {margin-bottom:15px;font-size:16px;font-weight:700;}
-.detail-element .s-title-sub {display: block;font-size: 14px; font-weight: 600;}
-.detail-element .s-title-sub em{color: #ff3333}
+.detail-element .s-title-sub {display: block;font-size: 14px;font-weight: 600;}
+.detail-element .s-title-sub em{color: #ff3333;font-size: 16px;}
 .detail-element .buyoption{
     display: block;
 }
@@ -1235,7 +1235,10 @@
 }
 
 /************************* 옵션정보 *************************/
-.detail-element .area.car-options-detail {}
+.detail-element .area.car-options-detail {
+    /* border-bottom: none; */
+    /* padding-bottom: 0; */
+}
 .detail-element .area.car-options-detail .options {margin-top:15px;}
 .detail-element .area.car-options-detail .options ul {display:flex;flex-wrap:wrap}
 /* ### 230717 수정 */
