--- a/mobile/css/common.css
+++ b/mobile/css/common.css
@@ -380,29 +380,39 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 
 .bot-fixed {
     width: 100%;
-    height: 60px;
-    position:fixed;
-    left:0px;
-    right:0px;
-    bottom:0px;
+    height: 60px; /* 기본 높이 */
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
     z-index: 2;
     padding: 8px 10px;
     background-color: #FFF;
-    /* background-color: #fff; */
     box-shadow: 0 -1px 10px rgba(0,0,0,0.16);
+    transition: height 2s ease, padding 2s ease; /* 패딩과 높이 모두 애니메이션 */
 }
 
+/* 펼쳐졌을 때 높이 변경 */
 .psc-btn-group.bot-fixed {
     height: auto;
-    -webkit-border-radius: 10px 10px 0 0;
+    -webkit-border-radius: 20px 20px 0 0;
     border-radius: 20px 20px 0 0;
-    /* border: 1px solid #E9E9E9; */
     z-index: 9999;
     max-height: 95vh;
-    padding: 40px 0 0;
-    /* animation:bot-fixmotion 1s infinite ; */
+    padding: 29px 0 0;
+    transition: height 2s ease, padding 2s ease;
 }
 
+/* 펼쳐졌을 때 높이 변경 */
+.psc-btn-group.bot-fixed.fold {
+    height: auto;
+    -webkit-border-radius: 20px 20px 0 0;
+    border-radius: 20px 20px 0 0;
+    z-index: 9999;
+    max-height: 95vh;
+    padding: 29px 0 0;
+    transition: height 2s ease, padding 2s ease;
+}
 
 /* @keyframes bot-fixmotion {
     0% {
