--- a/mobile/css/common.css
+++ b/mobile/css/common.css
@@ -389,6 +389,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     padding: 8px 10px;
     background-color: #FFF;
     box-shadow: 0 -1px 10px rgba(0,0,0,0.16);
+    /* transition: height 2s ease, padding 2s ease; */
 }
 
 /* 펼쳐졌을 때 높이 변경 */
@@ -398,9 +399,9 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     border-radius: 20px 20px 0 0;
     z-index: 9999;
     height: 551px;
-    max-height: 95vh;
+    /* max-height: 95vh; */
     padding: 35px 0 0;
-    transition: height 0.6s ease, padding 0.6s ease;
+    transition: height 1s ease, padding 2s ease;
 }
 
 /* 펼쳐졌을 때 높이 변경 */
