--- a/mobile/css/v2/renew.css
+++ b/mobile/css/v2/renew.css
@@ -131,7 +131,7 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .mainSrhBx .selectSrh li:first-child{margin-top:0;}
 .mainSrhBx .selectSrh li a{display:block;padding:12px;font-size:16px;font-weight:400;color:#1A1A1A;line-height:24px;border-radius: 10px;background:#fff;}
 .mainSrhBx .selectSrh li a:hover{background:#F5F7FA;}
-.mainSrhBx .srhTxtList{display:none;position:absolute;left:30px;top:63px;width: 304px;text-align:left;}
+.mainSrhBx .srhTxtList{display:none;position:absolute;top:63px;width: 86%;text-align:left;}
 .mainSrhBx .srhTxtList.visible{display:block;}
 .mainSrhBx .srhTxtList li{font-size:17px;font-weight: 700;color:#fff;line-height: 38px;/* display: flex; */position: relative;padding: 6px;border-bottom: 1px solid #ddd;}
 .mainSrhBx .srhTxtList li:after{
@@ -271,10 +271,18 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 
 .carKeywordBx{position:relative;width:100%;margin:0px auto 120px;}
 .carKeywordBx .conTit{font-size:28px;font-weight:800;color:#111;text-align:center;}
-.carKeywordBx .keywordBut{
-    position: relative; display: flex; white-space: nowrap; overflow-x: auto; gap: 8px;  left: 30px; top: 16px;
+.carKeywordBx .keywordBut {
+    position: relative;
+    display: flex;
+    white-space: nowrap;
+    overflow-x: auto;
+    gap: 8px;
+    left: 30px;
+    top: 16px;
     text-align: left;
-    width: 100%; height: 40px; padding-right: 51px;
+    width: 100%;
+    height: 40px;
+    padding-right: 51px;
     -ms-overflow-style: none;
 }
 .carKeywordBx .keywordBut::-webkit-scrollbar{
