--- a/mobile/css/common.css
+++ b/mobile/css/common.css
@@ -398,15 +398,16 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     -webkit-border-radius: 20px 20px 0 0;
     border-radius: 20px 20px 0 0;
     z-index: 9999;
-    height: 551px;
+    height: 560px;
     /* max-height: 95vh; */
-    padding: 35px 0 0;
-    transition: height 1s ease, padding 2s ease;
+    padding: 43px 0 0;
+    transition: height 1s ease, padding 0.3s ease;
+    /* transition: height 1s ease, padding 2s ease; */
 }
 
 /* 펼쳐졌을 때 높이 변경 */
 .psc-btn-group.bot-fixed.fold {
-    height: auto;
+    height: 145px;
     -webkit-border-radius: 20px 20px 0 0;
     border-radius: 20px 20px 0 0;
     z-index: 9999;
@@ -685,6 +686,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 .btn-group button:last-child { margin-right: 0; }
 .psc-btn-group .btn-group.btn-second{
     margin-top: 5px;
+    width: 100%;
 }
 .psc-btn-group .btn-group.btn-second button{
     width: 100%;
@@ -1827,7 +1829,7 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
 
 /* layer-popup */
 body.modalOpen {min-height:100vh;overflow:hidden; height: 100%;}
-.layer_popup_wrappper {position:fixed;top:0;right:0;left:0;bottom:0;width:100%;height:100%;overflow-x:hidden;overflow-y:auto;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-user-select:none;-webkit-user-drag:none;z-index: 999999;display: none;}
+.layer_popup_wrappper {position: absolute;top:0;right:0;left: 14px;width: 302px;height: 167px;background: #fff;border-radius: 22px;border: 1px solid #ddd;/* background: #f3f3f3; *//* bottom:0; *//* width:100%; *//* height:100%; */overflow-x:hidden;overflow-y:auto;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-user-select:none;-webkit-user-drag:none;z-index: 999999;display: none;}
 .layer_popup_wrappper:after {content:"";position:fixed;top:0;right:0;left:0;bottom:0;display:block;background:#000;opacity:0.1;}
 .layer_popup {position:absolute;left:0;right:0;top:60px;z-index:10020;}
 .vM .layer_popup {top:50%;left:10px;right:10px;transform:translate(0%,-50%);-webkit-transform:translate(0%,-50%);}
@@ -2007,10 +2009,10 @@ body.menuActive header.pop-header button {
 }
 
 /* common layer tooltip */
-.common-layer-group-conv {position:relative;display:inline-block;}
+.common-layer-group-conv {/* position:relative; */display:inline-block;}
 .common-layer-group-conv .common-layer-bt-conv {width:16px;height:100%;background-image:url("../images/icon/ico-tooltip.svg"); background-position: center; background-size: 100%; margin-left: 2px;}
 .pop-head .common-layer-group-conv .common-layer-bt-conv {width:auto; height:auto; background:none;}
-.common-layer-group-conv .layer_popup_wrappper {display:none;}
+.common-layer-group-conv .layer_popup_wrappper {display:none;top: 152px;}
 .common-layer-group-conv.view .layer_popup_wrappper {display:block;}
 /*.common-layer-group-conv .common-layer-tooptip:after {display:none; content:"";position:absolute;left:114px;bottom:-9px;display:block;width:15px;height:15px;background:#fff;transform:rotate(45deg);border:1px solid #000;border-top:0;border-left:0;}*/
 .common-layer-group-conv .common-layer-tooptip h4 {margin-bottom: 5px;white-space:nowrap;font-size:14px !important;font-weight:700;}
