--- a/mobile/css/search-list.css
+++ b/mobile/css/search-list.css
@@ -1041,9 +1041,10 @@
 .detail-element .car-seller .seller-profile {display:flex;margin:0 0 15px 0;}
 .detail-element .car-seller .seller-profile .pic {width:72px;height:72px;border-radius:50%;overflow:hidden;border: 1px solid #ddd;border-radius: 25px;}
 .detail-element .car-seller .seller-profile .pic img {display:block;width:100%;height:100%;}
-.detail-element .car-seller .seller-profile .info {padding-left:17px;padding-top: 4px;}
+.detail-element .car-seller .seller-profile .info {padding-left:17px;padding-top: 1px;}
 .detail-element .car-seller .seller-profile .info .name {font-size: 0;}
-.detail-element .car-seller .seller-profile .info .sellernumber {font-size: 13px; color:#A1A1A1;}
+.detail-element .car-seller .seller-profile .info .sellernumber {font-size: 13px;color: #333;margin: 2px 0px;}
+
 .detail-element .car-seller .seller-profile .info .shop {/*font-size:13px;font-weight:500;margin-left: 5px;*/font-size: 17px; font-weight: 500; color: #666;position: relative;}
 .detail-element .car-seller .seller-profile .info .shop::after {
  content: "";
@@ -1916,11 +1917,13 @@ margin: 0 auto;
 .psc-btn-group .tab-content .warranty-price .radio-wrap .radio label span.warranty-name{
     margin-left: 32px;
     display: flex;
+    width: 137%;
 }
 .psc-btn-group .tab-content .warranty-price .radio-wrap .radio label span.warranty-name em{
     font-size: 12px;
     color: #999;
     font-weight: 400;
+    margin-left: 12px;
 }
 .psc-btn-group .tab-content .warranty-price .radio-wrap .radio label span.warranty-charge{
     color: #333;
