--- a/mobile/css/common_new.css
+++ b/mobile/css/common_new.css
@@ -2190,7 +2190,7 @@ body.modalOpen {min-height:100vh;overflow:hidden;}
     display:block;
     top: 0;
     background: rgba(0,0,0,0.8);
-    z-index: 10023;
+    z-index: 100024;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -2223,17 +2223,19 @@ body.modalOpen {min-height:100vh;overflow:hidden;}
 }
 .buy-process-btn.icon01:after{
     content:'';
-    width:40px; height:40px;
+    width:40px;
+    height:40px;
     position:absolute;
-    left:40px;
+    left: 45px;
     background:url('../images/icon/buy_process_icon01.png') no-repeat 0 0;
-    background-size:40px; height:40px;
+    background-size:40px;
+    height:40px;
 }
 .buy-process-btn.icon02:after{
     content:'';
     width:40px; height:40px;
     position:absolute;
-    left:40px;
+    left:45px;
     background:url('../images/icon/buy_process_icon02.png');
     background-size:40px; height:40px;
 }
@@ -2241,7 +2243,7 @@ body.modalOpen {min-height:100vh;overflow:hidden;}
     content:'';
     width:40px; height:40px;
     position:absolute;
-    left:40px;
+    left:45px;
     background:url('../images/icon/buy_process_icon03.png');
     background-size:40px; height:40px;
 }
@@ -2850,7 +2852,7 @@ body.modalOpen {min-height:100vh;overflow:hidden;}
 .btn-wrap button.light {
     background: #FF3333;
     color: #fff;
-    width: 70%;
+    width: 100%;
 }
 .btn-wrap button.bt-tel{
     color:#FF3333;
@@ -2887,7 +2889,7 @@ body.menuActive header .page-title{
 
 
 /* custom alert */
-.custom-alert-pop .pop_inner {padding:40px 24px 12px;}
+.custom-alert-pop .pop_inner {padding: 10px 24px 12px;}
 .custom-alert-pop .pop_close {top:10px;right:10px;background:url("../images/icon/ico-close-layer-mix.svg") no-repeat 50% 50%;}
 .custom-alert-pop .pop-contents h3 {
     margin-bottom: 12px;
