--- a/mobile/css/process.css
+++ b/mobile/css/process.css
@@ -965,17 +965,21 @@ section.border-bt:last-child {
 
 .detail-list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .detail-list li {
-    padding: 16px 0;
-    border-bottom: 1px solid #e6e6e6;
+    padding: 8px 10px;
+    border:1px solid #ddd;
+    width: 49%;
+    border-radius:10px
+    width:30%;
 }
 .detail-list li:last-child {
-    border: none;
+    /* border: none; */
 }
 .detail-list li:nth-child(1) {
-    padding-top: 0px;
+    /* padding-top: 0px; */
 }
 .detail-list li a{
     position: relative;
