--- a/mobile/css/process.css
+++ b/mobile/css/process.css
@@ -988,7 +988,7 @@ section.border-bt:last-child {
 }
 .detail-list li a::before {
     position: absolute;
-    display: block;
+    display: none;
     content: '';
     width: 16px;
     height: 16px;
@@ -996,7 +996,7 @@ section.border-bt:last-child {
     right: 0;
 }
 .detail-list li .img-wrap {
-    margin-right: 16px;
+    margin-right: 8px;
     width: 48px;
     height: 48px;
     border-radius: 50%;
@@ -1045,6 +1045,8 @@ section.border-bt:last-child {
     font-weight: 400;
     letter-spacing: -0.28px;
     color: #999;
+    margin-top: 4px;
+    /* line-height: 43px; */
 }
 .detail-list strong {
     display: flex;
